Fix overflow

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ body::before {
 
 /* Media query */
 
-@media screen and (min-width: 60rem) {
+@media screen and (min-width: 64rem) {
 	.grid {
 		grid-template-columns: 1fr 1fr 1fr;
 	}
